--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,34 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    flex-direction: column;
-}
 
-.container {
-    display: flex;
-    flex-direction: column;
-    /* Располагаем блоки вертикально */
-    align-items: center;
-    gap: 20px;
-    max-width: 500px;
-}
-
-.question,
-.answer {
-    border: 1px solid #ccc;
-    padding: 10px;
-    width: 100%;
-    /* Установим ширину 100% для равных блоков */
-    text-align: center;
-    cursor: pointer;
-    user-select: none;
-}
-
-.question {
-    background-color: #e0e0e0;
-}
-
-.answer {
-    background-color: #f0f0f0;
-}
-
-#result {
-    margin-top: 20px;
-    font-weight: bold;
-}
 /* ------------------------------ */
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
+    height: 100vh;
     text-align: center;
-    background-image: url("./img/header.png");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: url("../img/header.png") no-repeat center center;
+    color: white;
 }
 
 .header h1 {
     font-size: 36px;
+    line-height: 0;
 }
 
 .header p {
     font-size: 18px;
+    line-height: 0;
 }
 
 .button {
+    margin-top: 25px;
     background-color: #3498db;
     color: #fff;
     padding: 10px 20px;
@@ -72,18 +43,35 @@ body {
 .section {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 20px;
+    padding: 50px 0;
 }
 
 .section img {
     max-width: 50%;
 }
-
+.sec-img{
+    height: 100%;
+}
+.section1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+    background: url(../img/bgsec2.png) no-repeat center center;
+    background-size: 100%;
+    color: white;
+}
 .section-text {
     max-width: 45%;
+    
 }
-
+.text-img{
+    width: 50%;
+}
 .footer {
     text-align: center;
     margin: 20px;
+    padding: 50px 0;
 }
