--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
     align-items: center;
     margin: 20px;
     padding: 50px 0;
+    flex-direction: row;
 }
 
 .section img {
@@ -56,6 +57,7 @@ body {
 }
 .section1{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 50px 0;
@@ -64,11 +66,25 @@ body {
     color: white;
 }
 .section-text {
-    max-width: 45%;
-    
+    /* max-width: 45%; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.section1 h2{
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 50px;
+}
+.section-text ul{
+    max-width: 20%;
+}
+.section-text li{
+    font-size: 16px;
+    margin-bottom: 15px;
 }
 .text-img{
-    width: 50%;
+    width: 40%;
 }
 .footer {
     text-align: center;
