--- a/css/test.css
+++ b/css/test.css
@@ -6,7 +6,12 @@ body {
     margin: 0;
     flex-direction: column;
 }
-
+.fsec{
+    /* background-color: bisque; */
+}
+.headerh1{
+    font-size: 30px;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -14,6 +19,8 @@ body {
     align-items: center;
     gap: 20px;
     max-width: 500px;
+    margin-top: 50px;
+
 }
 
 .question,
@@ -38,4 +45,15 @@ body {
 #result {
     margin-top: 20px;
     font-weight: bold;
+}
+.section2 {
+    background-color: bisque;
+    padding: 50px;
+}
+.sec3{
+
+}
+
+.sec4{
+    background-color: beige;
 }
