--- a/css/test.css
+++ b/css/test.css
@@ -57,3 +57,13 @@ body {
 .sec4{
     background-color: beige;
 }
+.sec5{
+
+}
+.sec6{
+    background-color: azure;
+}
+.sec8{
+    background-color: burlywood;
+    padding: 50px;
+}
