--- a/css/test.css
+++ b/css/test.css
@@ -67,3 +67,8 @@ body {
     background-color: burlywood;
     padding: 50px;
 }
+.sec10{
+    background-color: lightyellow;
+    padding: 50px;
+}
+
