--- a/css/test.css
+++ b/css/test.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
     /* height: 100vh; */
     margin: 0;
     flex-direction: column;
@@ -20,12 +20,12 @@ body {
     gap: 20px;
     max-width: 500px;
     margin-top: 50px;
-
 }
 
 .question,
 .answer {
-    border: 1px solid #ccc;
+    border: 1px solid #202020;
+    border-radius: 15px;
     padding: 10px;
     width: 100%;
     /* Установим ширину 100% для равных блоков */
@@ -35,11 +35,12 @@ body {
 }
 
 .question {
-    background-color: #e0e0e0;
+    background-color: #3498db;
+    color: white;
 }
 
 .answer {
-    background-color: #f0f0f0;
+    background-color: #e67e22;
 }
 
 #result {
@@ -51,20 +52,28 @@ body {
     padding: 50px;
 }
 .sec3{
-
+    padding: 50px;
 }
 
 .sec4{
     background-color: beige;
+    padding: 50px;
 }
 .sec5{
-
+    padding: 50px;
 }
 .sec6{
     background-color: azure;
+    padding: 50px;
+}
+.sec7{
+    padding: 50px;
 }
 .sec8{
     background-color: burlywood;
+    padding: 50px;
+}
+.sec9{
     padding: 50px;
 }
 .sec10{
@@ -72,3 +81,6 @@ body {
     padding: 50px;
 }
 
+.sec11{
+    padding: 50px;
+}
